--- a/application/templates/organisation/index.html
+++ b/application/templates/organisation/index.html
@@ -17,7 +17,7 @@
     <form class="govuk-form" data-module="dl-list-filter-form">
       <div class="govuk-form-group">
         <label for="organisation" class="govuk-label">Planning authority</label>
-        <div class="govuk-hint">For example, Harrogate or Lichfield</div>
+        <div class="govuk-hint">For example, Yorkshire or Lichfield</div>
         <input type="text" class="govuk-input" name="organisation">
       </div>
       <div class="app-hide-if-js">
