--- a/application/templates/organisation/organisation.html
+++ b/application/templates/organisation/organisation.html
@@ -10,16 +10,22 @@
   <span class="govuk-caption-xl">Organisation</span>
   <h1 class="govuk-heading-xl">{{organisation.name}}</h1>
 
-  <h2 class="govuk-heading-m">Development plans</h2>
-  {% if organisation.development_plans | length > 0%}
+  <h2 class="govuk-heading-l">Development plans</h2>
+
+  <a href="{{ url_for('development_plan.new', organisation=organisation.organisation) }}" class="govuk-button govuk-button--secondary">+ add new plan</a>
+
+
+  <p class="govuk-body">The plans we have collected are grouped by the plan type</p>
+
+  {% for plan_type, ps in plans.items() %}
+  <h2 class="govuk-heading-m">{{ plan_type|replace("-", " ")|capitalize }}s</h2>
+
   <ul class="govuk-list govuk-list--bullet">
-    {% for plan in organisation.development_plans %}
+    {% for plan in ps %}
       <li><a href="{{ url_for('development_plan.plan', reference=plan.reference) }}" class="govuk-link">{{ plan.name }}</a></li>
     {% endfor %}
   </ul>
-  {% else %}
-  <p class="govuk-body"><span class="govuk-hint">No plans recorded</span></p>
-  {% endif %}
-  <a href="{{ url_for('development_plan.new', organisation=organisation.organisation) }}" class="govuk-button govuk-button--secondary">+ add new plan</a>
+  {% endfor %}
+
 
 {% endblock content %}
