--- a/application/templates/stats.html
+++ b/application/templates/stats.html
@@ -14,7 +14,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h3 class="govuk-heading-l">Local plans</h3>
+    <h3 class="govuk-heading-l app-heading--divided">Local plans</h3>
   </div>
   <div class="govuk-grid-column-one-third">
     <div class="dl-data-item ">
@@ -46,7 +46,7 @@
   </div>
 </div>
 
-<h3 class="govuk-heading-l govuk-!-margin-top-9">Development plans</h3>
+<h3 class="govuk-heading-l govuk-!-margin-top-9 app-heading--divided">Development plans</h3>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-third">
