--- a/application/templates/stats.html
+++ b/application/templates/stats.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-three-quarters">
+  <div class="govuk-grid-column-full">
     <h3 class="govuk-heading-l app-heading--divided">Local plans</h3>
   </div>
   <div class="govuk-grid-column-one-third">
