--- a/application/templates/stats.html
+++ b/application/templates/stats.html
@@ -8,7 +8,7 @@
   </div>
   <div class="govuk-grid-column-one-third">
     <p class="govuk-body">
-      <a href="{{ url_for('base.roulette') }}" class="govuk-link">
+      <a href="{{ url_for('base.randomiser') }}" class="govuk-link">
 
       <svg width="191px" height="210px" viewBox="0 0 191 210" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin: 0 auto; display: block;">
           <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
