--- a/application/templates/macros/progress-bar.html
+++ b/application/templates/macros/progress-bar.html
@@ -1,8 +1,8 @@
 {% macro progressBar(params) %}
 <section class="app-progress-banner">
-  <div class="app-progress__bar" style="--progress-bar-target: {{ params.organisations|length }}; --progress-bar-progress: {{ params.orgs_with_adopted_plan|length }};">
+  <div class="app-progress__bar" style="--progress-bar-target: {{ params.organisations|length }}; --progress-bar-progress: {{ params.orgs_with_adopted_plan|length }};" count="{{ params.organisations|length }}">
     <p class="govuk-visually-hidden">We expect to collect adopted local plans from {{ params.organisations|length }} planning authorities</p>
-    <span class="app-progress__bar__completed">
+    <span class="app-progress__bar__completed" count="{{ params.orgs_with_adopted_plan|length }}">
       <p class="govuk-visually-hidden">So far we have collected from {{ params.orgs_with_adopted_plan|length }}</p>
     </span>
   </div>
