--- a/application/static/stylesheets/application.css
+++ b/application/static/stylesheets/application.css
@@ -7572,7 +7572,7 @@
   z-index: 99; }
   .app-progress__bar__completed:after {
     position: absolute;
-    left: .5em;
+    right: 1em;
     top: 50%;
     transform: translateY(-50%);
     font-family: "GDS Transport", arial, sans-serif;
@@ -7584,7 +7584,9 @@
     line-height: 1.14286;
     content: attr(count);
     color: #fff;
-    z-index: 100; }
+    z-index: 100;
+    text-align: right;
+    width: calc((var(--progress-bar-progress) / var(--progress-bar-target)) * 100%); }
     @media print {
       .app-progress__bar__completed:after {
         font-family: sans-serif; } }
