--- a/src/scss/components/_progress-banner.scss
+++ b/src/scss/components/_progress-banner.scss
@@ -52,12 +52,14 @@
   z-index: 99;
   &:after {
     position: absolute;
-    left: .5em;
+    right: 1em;
     top: 50%;
     transform: translateY(-50%);
     @include govuk-font(16, bold);
     content: attr(count);
     color: #fff;
     z-index: 100;
+    text-align: right;
+    width: calc((var(--progress-bar-progress) / var(--progress-bar-target)) * 100%);
   }
 }
