udpate db models to more closely match specification

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -53,7 +53,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
     <h2 class="govuk-heading-m">Download</h2>
-    <p class="govuk-body"><a href="{{ url_for('development_plan.download') }}" class="govuk-link">Download a zip file of the data collected</a></p>
+    <p class="govuk-body"><a class="govuk-link">Download a zip file of the data collected</a></p>
   </div>
 </div>
 
