Add pydantic to help with data export.
Serialise development plan to json to test export.

Next step will export all relevant types to csv.

--- a/application/templates/admin/index.html
+++ b/application/templates/admin/index.html
@@ -7,9 +7,9 @@
 
     <p class="govuk-body">4 datasets managed by DLUHC support the <a href="https://digital-land.github.io/specification/specification/development-plan/" class="govuk-link">development plan standard</a></p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Development plan <a href="" class="govuk-link">document types</a></li>
+      <li>Development plan <a href="https://dluhc-datasets.planning-data.dev/dataset/development-plan-document-type" class="govuk-link">document types</a></li>
       <li>Development plan <a href="https://dluhc-datasets.planning-data.dev/dataset/development-plan-event" class="govuk-link">events</a></li>
-      <li>Development plan <a href="https://dluhc-datasets.planning-data.dev/dataset/development-plan-geography-type" class="govuk-link">geography types</a></li>
+      <li>Development plan <a href="https://dluhc-datasets.planning-data.dev/dataset/development-plan-boundary-type" class="govuk-link">boundary types</a></li>
       <li>Development <a href="https://dluhc-datasets.planning-data.dev/dataset/development-plan-type" class="govuk-link">plan types</a></li>
     </ul>
 
