--- a/application/templates/organisation/organisation.html
+++ b/application/templates/organisation/organisation.html
@@ -16,18 +16,24 @@
   <a href="{{ url_for('development_plan.new', organisation=organisation.organisation) }}" class="govuk-button govuk-button--secondary">+ add new plan</a>
 
   {% if plans -%}
-  <p class="govuk-body">The plans we have collected are grouped by the plan type</p>
+    <p class="govuk-body">The plans we have collected are grouped by the plan type</p>
   {%- endif %}
 
   {%- for plan_type, ps in plans.items() %}
-  <h2 class="govuk-heading-m">{{ plan_type|replace("-", " ")|capitalize }}s</h2>
+    <h2 class="govuk-heading-m">{{ plan_type|replace("-", " ")|capitalize }}s</h2>
 
-  <ul class="govuk-list govuk-list--bullet">
-    {% for plan in ps %}
-      <li><a href="{{ url_for('development_plan.plan', reference=plan.reference) }}" class="govuk-link">{{ plan.name }}</a></li>
-    {% endfor %}
-  </ul>
+    <ul class="govuk-list govuk-list--bullet">
+      {% for plan in ps %}
+        <li><a href="{{ url_for('development_plan.plan', reference=plan.reference) }}" class="govuk-link">{{ plan.name }}</a></li>
+      {% endfor %}
+    </ul>
   {% endfor %}
 
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-three-quarters">
+      <h2 class="govuk-heading-m">Download</h2>
+      <p class="govuk-body"><a href="{{ url_for('organisation.download_plans', organisation=organisation.organisation) }}" class="govuk-link">Download a zip file of the data collected for this organisation</a></p>
+    </div>
+  </div>
 
 {% endblock content %}
