--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -91,7 +91,7 @@
             Plan boundary
           </h2>
           <div class="app-summary-card__actions">
-            {%- if plan.boundary %}
+            {%- if plan.development_plan_boundary %}
             <a href="{{ url_for('development_plan.edit_geography', reference=plan.reference) }}" class="govuk-link">Edit<span class="govuk-visually-hidden"> record</span></a>
             {% else %}
             <a href="{{ url_for('development_plan.add_geography', reference=plan.reference) }}" class="govuk-link">Add<span class="govuk-visually-hidden"> record</span></a>
@@ -99,9 +99,9 @@
           </div>
         </header>
         <div class="app-summary-card__body">
-        {%- if plan.boundary %}
-          {%- set map_id = "map-" + plan.boundary.reference %}
-          <p class="govuk-hint govuk-!-margin-top-0">Reference: {{ plan.boundary.reference }}</p>
+        {%- if plan.development_plan_boundary %}
+          {%- set map_id = "map-" + plan.development_plan_boundary.reference %}
+          <p class="govuk-hint govuk-!-margin-top-0">Reference: {{ plan.development_plan_boundary.reference }}</p>
           <div class="app-map-wrapper">
             <div id="{{ map_id }}" style="height: 400px;">
           </div>
@@ -109,7 +109,7 @@
             const AppMap = {}
             AppMap.mapID = '{{map_id}}';
             AppMap.geography = {
-              'featureCollection': {{plan.boundary.geojson | tojson}},
+              'featureCollection': {{plan.development_plan_boundary.geojson | tojson}},
               'centrePoint': {
                 'lat': {{ coords["lat"] }},
                 'long': {{ coords["long"] }}
